@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,6 +26,7 @@ package jdk.graal.compiler.hotspot.test;
 
 import static jdk.graal.compiler.debug.StandardPathUtilitiesProvider.DIAGNOSTIC_OUTPUT_DIRECTORY_MESSAGE_FORMAT;
 import static jdk.graal.compiler.debug.StandardPathUtilitiesProvider.DIAGNOSTIC_OUTPUT_DIRECTORY_MESSAGE_REGEXP;
+import static jdk.graal.compiler.test.SubprocessUtil.getProcessCommandLine;
 import static jdk.graal.compiler.test.SubprocessUtil.getVMCommandLine;
 import static jdk.graal.compiler.test.SubprocessUtil.withoutDebuggerArguments;
 
@@ -50,7 +51,7 @@ import jdk.graal.compiler.core.GraalCompilerOptions;
 import jdk.graal.compiler.core.test.GraalCompilerTest;
 import jdk.graal.compiler.test.SubprocessUtil;
 import jdk.graal.compiler.test.SubprocessUtil.Subprocess;
-import jdk.graal.compiler.truffle.test.SLTruffleGraalTestSuite;
+import jdk.graal.compiler.truffle.test.SLCompileASTTestSuite;
 
 /**
  * Tests support for dumping graphs and other info useful for debugging a compiler crash.
@@ -62,25 +63,16 @@ public class CompilationWrapperTest extends GraalCompilerTest {
      */
     @Test
     public void testVMCompilation1() throws IOException, InterruptedException {
-        assumeNotImpactedByJDK8316453();
         assumeManagementLibraryIsLoadable();
         testHelper(Collections.emptyList(), Arrays.asList("-XX:-TieredCompilation",
                         "-XX:+UseJVMCICompiler",
+                        "-XX:-UseJVMCINativeLibrary",
                         "-XX:JVMCIThreads=1",
                         "-Djdk.graal.CompilationFailureAction=ExitVM",
                         "-Djdk.graal.CrashAt=TestProgram.*",
                         "-Xcomp",
                         "-XX:CompileCommand=compileonly,*/TestProgram.print*",
                         TestProgram.class.getName()));
-    }
-
-    /**
-     * Assumes the current JDK does not contain the bug resolved by JDK-8316453.
-     */
-    private static void assumeNotImpactedByJDK8316453() {
-        Runtime.Version version = Runtime.version();
-        Runtime.Version jdk8316453 = Runtime.Version.parse("22+17");
-        Assume.assumeTrue("-Xcomp broken", version.feature() < 22 || version.compareTo(jdk8316453) >= 0);
     }
 
     public static class Probe {
@@ -160,7 +152,6 @@ public class CompilationWrapperTest extends GraalCompilerTest {
      */
     @Test
     public void testVMCompilation3() throws IOException, InterruptedException {
-        assumeNotImpactedByJDK8316453();
         assumeManagementLibraryIsLoadable();
         final int maxProblems = 2;
         Probe failurePatternProbe = new Probe("[[[Graal compilation failure]]]", 1, maxProblems);
@@ -183,6 +174,7 @@ public class CompilationWrapperTest extends GraalCompilerTest {
         };
         testHelper(Arrays.asList(probes), Arrays.asList("-XX:-TieredCompilation",
                         "-XX:+UseJVMCICompiler",
+                        "-XX:-UseJVMCINativeLibrary",
                         "-XX:JVMCIThreads=1",
                         "-Djdk.graal.SystemicCompilationFailureRate=0",
                         "-Djdk.graal.CompilationFailureAction=Diagnose",
@@ -205,8 +197,9 @@ public class CompilationWrapperTest extends GraalCompilerTest {
                                         "-Djdk.graal.CompilationFailureAction=ExitVM",
                                         "-Dpolyglot.engine.CompilationFailureAction=ExitVM",
                                         "-Dpolyglot.engine.TreatPerformanceWarningsAsErrors=all",
+                                        "-Dpolyglot.engine.AssertProbes=false",
                                         "-Djdk.graal.CrashAt=root test1"),
-                        SLTruffleGraalTestSuite.class.getName(), "test");
+                        SLCompileASTTestSuite.class.getName(), "test");
     }
 
     /**
@@ -224,11 +217,12 @@ public class CompilationWrapperTest extends GraalCompilerTest {
                                         "-Djdk.graal.CompilationFailureAction=Silent",
                                         "-Dpolyglot.engine.CompilationFailureAction=ExitVM",
                                         "-Dpolyglot.engine.TreatPerformanceWarningsAsErrors=all",
+                                        "-Dpolyglot.engine.AssertProbes=false",
                                         "-Djdk.graal.CrashAt=root test1:PermanentBailout"),
-                        SLTruffleGraalTestSuite.class.getName(), "test");
+                        SLCompileASTTestSuite.class.getName(), "test");
     }
 
-    private static final boolean VERBOSE = Boolean.getBoolean("CompilationWrapperTest.verbose");
+    private static final boolean VERBOSE = Boolean.getBoolean("CompilationWrapperTest.verbose") || String.valueOf(getProcessCommandLine()).contains("-JUnitVerbose");
 
     public static void testHelper(List<Probe> initialProbes,
                     List<String> extraVmArgs,
@@ -240,19 +234,21 @@ public class CompilationWrapperTest extends GraalCompilerTest {
                     List<ZipProbe> initialZipProbes,
                     List<String> extraVmArgs,
                     String... mainClassAndArgs) throws IOException, InterruptedException {
-        final File dumpPath = new File(CompilationWrapperTest.class.getSimpleName() + "_" + System.currentTimeMillis()).getAbsoluteFile();
+        boolean isWindows = System.getProperty("os.name", "").startsWith("Windows");
+        Assume.assumeFalse("JaCoCo on Windows found -> skipping (GR-65076)", isWindows && SubprocessUtil.isJaCoCoAttached());
+        final Path dumpPath = getOutputDirectory().resolve(CompilationWrapperTest.class.getSimpleName() + "_" + nowAsFileName());
         List<String> vmArgs = withoutDebuggerArguments(getVMCommandLine());
         vmArgs.removeIf(a -> a.startsWith("-Djdk.graal."));
         vmArgs.remove("-esa");
         vmArgs.remove("-ea");
         vmArgs.add("-Djdk.graal.DumpPath=" + dumpPath);
         // Force output to a file even if there's a running IGV instance available.
-        vmArgs.add("-Djdk.graal.PrintGraphFile=true");
+        vmArgs.add("-Djdk.graal.PrintGraph=File");
         vmArgs.addAll(extraVmArgs);
 
         Subprocess proc = SubprocessUtil.java(vmArgs, mainClassAndArgs);
         if (VERBOSE) {
-            System.out.println(proc);
+            System.out.printf("%n%s%n", proc.preserveArgfile());
         }
 
         try {
@@ -274,7 +270,7 @@ public class CompilationWrapperTest extends GraalCompilerTest {
             for (Probe probe : probes) {
                 String error = probe.test();
                 if (error != null) {
-                    Assert.fail(String.format("Did not find expected occurrences of '%s' in output of command: %s%n%s", probe.substring, error, proc));
+                    Assert.fail(String.format("Did not find expected occurrences of '%s' in output of command: %s%n%s", probe.substring, error, proc.preserveArgfile()));
                 }
             }
 
@@ -284,7 +280,7 @@ public class CompilationWrapperTest extends GraalCompilerTest {
             Assert.assertTrue(line, m.find());
             String diagnosticOutputZip = m.group(1);
 
-            List<String> dumpPathEntries = Arrays.asList(dumpPath.list());
+            List<String> dumpPathEntries = List.of(dumpPath.toFile().list());
 
             File zip = new File(diagnosticOutputZip).getAbsoluteFile();
             Assert.assertTrue(zip.toString(), zip.exists());
@@ -317,14 +313,14 @@ public class CompilationWrapperTest extends GraalCompilerTest {
                 for (ZipProbe probe : zipProbes) {
                     String error = probe.test();
                     if (error != null) {
-                        Assert.fail(String.format("Did not find expected occurrences of '%s' files in %s: %s%n%s", probe.suffix, entries, error, proc));
+                        Assert.fail(String.format("Did not find expected occurrences of '%s' files in %s: %s%n%s", probe.suffix, entries, error, proc.preserveArgfile()));
                     }
                 }
             } finally {
                 zip.delete();
             }
         } finally {
-            Path directory = dumpPath.toPath();
+            Path directory = dumpPath;
             removeDirectory(directory);
         }
     }
